fix about section spacing on mobile

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ transition: all 0.35s;
     }
 }
 
+
 /*BUTTON STYLING*/
 
 .btn-outline-custom {
@@ -104,4 +105,10 @@ transition: all 0.35s;
 	text-align: center;
 	margin-top: 20px;
 	font-size: 22px;
+}
+
+@media screen and (max-width: 540px) {
+	#about p:nth-of-type(2) {
+	margin-top: 40px;
+}
 }
